compile_err.txt
Ojo1R.java:12: error: incompatible types: int cannot be converted to Boolean
    return 1337;
           ^
1 error
